Commit 8. Content page css styles

--- a/Frontend/content.html
+++ b/Frontend/content.html
@@ -20,7 +20,7 @@
         </div>
         <div class="form-container">
             <form>
-              <label for="verse-choose">Choose a verse</label>
+              <label for="verse-choose">Choose a page</label>
               <select id="verse-choose" name="verse-choose">
                 <option>Verse 1</option>
                 <option>Verse 2</option>
@@ -28,7 +28,7 @@
                 <option>Verse 4</option>
               </select>
             </form>
-            <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843</em></h2>
+            <p>Data from temperature indicators taken from esp32</p>
             <pre>
 
             </pre>
