Commit 9. New form.
New form for autorisation, button for mqtt and 4 test txt files.

--- a/Frontend/content.html
+++ b/Frontend/content.html
@@ -18,6 +18,9 @@
                 <source src="img/Neon.webm" type="video/webm">
             </video>
         </div>
+        <form class="mqtt">
+            <button>Run MQTT client</button>
+        </form>
         <div class="form-container">
             <form>
               <label for="verse-choose">Choose a page</label>
