--- a/Frontend/autorisation.html
+++ b/Frontend/autorisation.html
@@ -23,6 +23,7 @@
                     <input type="password" name="auth_pass" placeholder="Enter your password" required >
                     <button class="form_auth_button" type="submit" name="form_auth_submit">Log in</button>
                 </form>
+                <span class="create_account"><a href="registration.html">Create your Account</a></span>
             </div>
         </div>
     </body>
