--- a/Frontend/content.html
+++ b/Frontend/content.html
@@ -18,9 +18,6 @@
                 <source src="img/Neon.webm" type="video/webm">
             </video>
         </div>
-        <form class="mqtt">
-            <button>Run MQTT client</button>
-        </form>
         <div class="form-container">
             <form>
               <label for="verse-choose">Choose a page</label>
@@ -67,5 +64,75 @@
           verseChoose.value = 'Verse 1';
 
         </script>
+        <div class="input-form-container">
+            <form id="form" onsubmit="return false;">
+                <div class="x_handler">
+                    <input  type="text" class="colortext" placeholder="x1" size="5" id="userInput_x1" />
+                    <input  type="text" class="colortext" placeholder="x2" size="5" id="userInput_x2" />
+                    <input  type="text" class="colortext" placeholder="x3" size="5" id="userInput_x3" />
+                    <input  type="text" class="colortext" placeholder="x4" size="5" id="userInput_x4" />
+                    <input  type="text" class="colortext" placeholder="x5" size="5" id="userInput_x5" />
+                </div>
+                <div class="y_handler">
+                    <input  type="text" class="colortext" placeholder="y1" size="5" id="userInput_y1" />
+                    <input  type="text" class="colortext" placeholder="y2" size="5" id="userInput_y2" />
+                    <input  type="text" class="colortext" placeholder="y3" size="5" id="userInput_y3" />
+                    <input  type="text" class="colortext" placeholder="y4" size="5" id="userInput_y4" />
+                    <input  type="text" class="colortext" placeholder="y5" size="5" id="userInput_y5" />
+                </div>
+                    <input  type="submit"  class="sub_button" value="Get X & Y"  onclick="othername();" />
+            </form>
+        </div>
+
+        <script type="text/javascript">
+        function othername() {
+            var x1 = document.getElementById("userInput_x1").value;
+            var x2 = document.getElementById("userInput_x2").value;
+            var x3 = document.getElementById("userInput_x3").value;
+            var x4 = document.getElementById("userInput_x4").value;
+            var x5 = document.getElementById("userInput_x5").value;
+
+            var y1 = document.getElementById("userInput_y1").value;
+            var y2 = document.getElementById("userInput_y2").value;
+            var y3 = document.getElementById("userInput_y3").value;
+            var y4 = document.getElementById("userInput_y4").value;
+            var y5 = document.getElementById("userInput_y5").value;
+            let data = [ x1, x2, x3, x4, x5 ];
+            let labels = [y1, y2, y3, y4, y5];
+
+            let canvas = document.getElementById('canvas');
+
+
+            let ctx = canvas.getContext('2d');
+            ctx.fillStyle = "white"; // Задаём чёрный цвет для линий
+            ctx.lineWidth = 2.0; // Ширина линии
+            ctx.beginPath(); // Запускает путь
+            ctx.moveTo(30, 10); // Указываем начальный путь
+            ctx.lineTo(30, 460); // Перемешаем указатель
+            ctx.lineTo(500, 460); // Ещё раз перемешаем указатель
+            ctx.stroke(); // Делаем контур
+
+            ctx.fillStyle = "white";
+            for(let i = 0; i < 6; i++) {
+                ctx.fillText((5 - i) * 10 + "", 4, i * 80 + 60);
+                ctx.beginPath();
+                ctx.moveTo(25, i * 80 + 60);
+                ctx.lineTo(30, i * 80 + 60);
+                ctx.stroke();
+            }
+            for(var i=0; i<5; i++) {
+                ctx.fillText(labels[i], 50+ i*100, 475);
+            }
+            ctx.fillStyle = "#615AF3";
+            for(var i=0; i<data.length; i++) {
+                var dp = data[i];
+                ctx.fillRect(40 + i*100, 460-dp*8 , 50, dp*8);
+            }
+          }
+
+        </script>
+        <div class="graph-container">
+            <canvas width="500" height="500" id="canvas"></canvas>
+        </div>
     </body>
 </html>
